MHA-39|Feat: Update/delete messages/series
